# Tide

./: .gitignore  README.md  SIGNING.md  components.json  package-lock.json  package.json  project.md  tailwind.config.js  vite.config.ts  需求说明.md
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe_connection.rs  probe_keychain.rs  probe_metadata.rs
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: connection.rs  metadata.rs  mod.rs  query.rs
src-tauri/src/influx/: convert.rs  flight.rs  metadata.rs  mod.rs  pool.rs
src-tauri/src/storage/: connections.rs  history.rs  keychain.rs  mod.rs
src/components/: ThemeToggle.tsx
src/components/ui/: dialog.tsx
src/features/connection/: ConnectionFormDialog.tsx  ConnectionList.tsx
src/features/explorer/: ResourceBrowser.tsx
src/features/query/: ChartView.tsx  HistoryPanel.tsx  QueryPanel.tsx  ResultGrid.tsx
src/lib/: api.ts  export.ts
src/store/: connection-store.ts  theme-store.ts
src/types/: connection.ts  history.ts  metadata.ts  query.ts
